--- a/MSA.2.Backend/MSA.2.Backend.csproj
+++ b/MSA.2.Backend/MSA.2.Backend.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>MSA._2.Backend</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NSwag.AspNetCore" Version="13.16.1" />
+  </ItemGroup>
+
 </Project>
