Updates to configuration files

--- a/MSA.2.Backend/appsettings.Development.json
+++ b/MSA.2.Backend/appsettings.Development.json
@@ -4,5 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "RickAndMortyClientName": "rickandmorty",
+  "RickAndMortyAddress": "https://rickandmortyapi.com/api"
 }
